Controller für Dateneingabe